// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tabs /> should render with default props 1`] = `
<div
  className="mfui-tabs mfui-tabs_size_medium mfui-tabs_tab-color_white mfui-tabs_h-align_left mfui-tabs_indents"
>
  <div
    style={
      Object {
        "height": "auto",
      }
    }
  >
    <div
      className="mfui-tabs__swiper-wrapper"
      style={
        Object {
          "paddingLeft": 0,
          "paddingRight": 0,
        }
      }
    >
      <Swiper
        className="mfui-tabs__swiper mfui-tabs__swiper_beginning"
        initialSlide={0}
        onFromEdge={[Function]}
        onReachBeginning={[Function]}
        onReachEnd={[Function]}
        onSwiper={[Function]}
        simulateTouch={false}
        slidesPerView="auto"
      >
        <SwiperSlide
          className="mfui-tabs__slide"
          key=".0"
        >
          <div
            className="mfui-tabs__tab"
          >
            <div
              className="mfui-tabs__tab-inner mfui-tabs__tab-inner_current"
              onClick={[Function]}
            />
          </div>
        </SwiperSlide>
        <SwiperSlide
          className="mfui-tabs__slide"
          key=".1"
        >
          <div
            className="mfui-tabs__tab"
          >
            <div
              className="mfui-tabs__tab-inner"
              onClick={[Function]}
            />
          </div>
        </SwiperSlide>
        <div
          className="mfui-tabs__underline"
          slot="wrapper-start"
          style={
            Object {
              "transform": "translateX(0px)",
              "transitionProperty": "none",
              "width": "0px",
            }
          }
        />
        <test-file-stub
          className="mfui-tabs__arrow mfui-tabs__arrow_prev mfui-tabs__arrow_hide"
          onClick={[Function]}
        />
        <test-file-stub
          className="mfui-tabs__arrow mfui-tabs__arrow_next"
          onClick={[Function]}
        />
      </Swiper>
    </div>
  </div>
  <div
    className="mfui-tabs__panel mfui-tabs__panel_current"
    key=".0"
  >
    1
  </div>
  <div
    className="mfui-tabs__panel"
    key=".1"
  >
    2
  </div>
</div>
`;

exports[`<Tabs /> should render with props 1`] = `
<div
  className="mfui-tabs mfui-tabs_size_large mfui-tabs_tab-color_green mfui-tabs_h-align_center mfui-tabs_auto-width className rootClass"
  data-test="test"
>
  <div
    style={
      Object {
        "height": "auto",
      }
    }
  >
    <div
      className="mfui-tabs__swiper-wrapper"
      style={
        Object {
          "paddingLeft": 0,
          "paddingRight": 0,
        }
      }
    >
      <Swiper
        className="mfui-tabs__swiper mfui-tabs__swiper_beginning innerIndentsClass"
        data-test="test"
        initialSlide={1}
        onFromEdge={[Function]}
        onReachBeginning={[Function]}
        onReachEnd={[Function]}
        onSwiper={[Function]}
        simulateTouch={false}
        slidesPerView="auto"
      >
        <SwiperSlide
          className="mfui-tabs__slide"
          key=".0"
        >
          <div
            className="mfui-tabs__tab tabClass"
          >
            <a
              className="mfui-tabs__tab-inner mfui-tabs__tab-inner_with-icon"
              href="www.test.com"
              onClick={[Function]}
            >
              <div
                className="mfui-tabs__tab-icon"
              >
                <test-file-stub />
              </div>
              <div
                className="mfui-tabs__tab-title"
              >
                title 1
              </div>
            </a>
          </div>
        </SwiperSlide>
        <SwiperSlide
          className="mfui-tabs__slide"
          key=".1"
        >
          <div
            className="mfui-tabs__tab tabClass activeTabClass"
          >
            <div
              className="tab-wrapper"
            >
              <div
                className="mfui-tabs__tab-inner mfui-tabs__tab-inner_current"
                onClick={[Function]}
              >
                <div
                  className="mfui-tabs__tab-title"
                >
                  title 2
                </div>
              </div>
            </div>
          </div>
        </SwiperSlide>
        <div
          className="mfui-tabs__underline"
          slot="wrapper-start"
          style={
            Object {
              "transform": "translateX(0px)",
              "transitionProperty": "none",
              "width": "0px",
            }
          }
        />
        <test-file-stub
          className="mfui-tabs__arrow mfui-tabs__arrow_prev mfui-tabs__arrow_hide"
          data-test="test"
          onClick={[Function]}
        />
        <test-file-stub
          className="mfui-tabs__arrow mfui-tabs__arrow_next"
          data-test="test"
          onClick={[Function]}
        />
      </Swiper>
    </div>
  </div>
  <div
    className="mfui-tabs__panel mfui-tabs__panel_current"
    data-test="test[2]"
    key=".1"
  >
    2
  </div>
</div>
`;

exports[`<Tabs /> should render without panels 1`] = `
<div
  className="mfui-tabs mfui-tabs_size_medium mfui-tabs_tab-color_white mfui-tabs_h-align_left mfui-tabs_indents"
>
  <div
    style={
      Object {
        "height": "auto",
      }
    }
  >
    <div
      className="mfui-tabs__swiper-wrapper"
      style={
        Object {
          "paddingLeft": 0,
          "paddingRight": 0,
        }
      }
    >
      <Swiper
        className="mfui-tabs__swiper mfui-tabs__swiper_beginning"
        initialSlide={0}
        onFromEdge={[Function]}
        onReachBeginning={[Function]}
        onReachEnd={[Function]}
        onSwiper={[Function]}
        simulateTouch={false}
        slidesPerView="auto"
      >
        <SwiperSlide
          className="mfui-tabs__slide"
          key=".0"
        >
          <div
            className="mfui-tabs__tab"
          >
            <a
              className="mfui-tabs__tab-inner mfui-tabs__tab-inner_current mfui-tabs__tab-inner_with-icon"
              href="www.test.com"
              onClick={[Function]}
            >
              <div
                className="mfui-tabs__tab-icon"
              >
                <test-file-stub />
              </div>
              <div
                className="mfui-tabs__tab-title"
              >
                title 1
              </div>
            </a>
          </div>
        </SwiperSlide>
        <SwiperSlide
          className="mfui-tabs__slide"
          key=".1"
        >
          <div
            className="mfui-tabs__tab"
          >
            <div
              className="tab-wrapper"
            >
              <div
                className="mfui-tabs__tab-inner"
                onClick={[Function]}
              >
                <div
                  className="mfui-tabs__tab-title"
                >
                  title 2
                </div>
              </div>
            </div>
          </div>
        </SwiperSlide>
        <div
          className="mfui-tabs__underline"
          slot="wrapper-start"
          style={
            Object {
              "transform": "translateX(0px)",
              "transitionProperty": "none",
              "width": "0px",
            }
          }
        />
        <test-file-stub
          className="mfui-tabs__arrow mfui-tabs__arrow_prev mfui-tabs__arrow_hide"
          onClick={[Function]}
        />
        <test-file-stub
          className="mfui-tabs__arrow mfui-tabs__arrow_next"
          onClick={[Function]}
        />
      </Swiper>
    </div>
  </div>
</div>
`;
